# algorithm_analysis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Examples/: README.md
Source/: CMakeLists.txt  common_logic.hpp  generators.hpp  graph.hpp  main.cpp  sort.hpp  tests.hpp  tests_with_counter.hpp  tests_with_time.hpp  utils.cpp  utils.hpp
Source/AlgorithmAnalysis/: AlgorithmAnalysis.sln
Source/AlgorithmAnalysis/Applications/AlgorithmAnalysis.DesktopApp/: AlgorithmAnalysis.DesktopApp.csproj  App.xaml  App.xaml.cs  app.Designer.cs  app.manifest
Source/AlgorithmAnalysis/Applications/AlgorithmAnalysis.Installer/: AlgorithmAnalysis.Installer.wixproj  Common.wxl  Components.wxs  ComponentsGenerated.wxs  Directories.wxs  Product.wxs
Source/AlgorithmAnalysis/Applications/AlgorithmAnalysis.Package/: AlgorithmAnalysis.Package.wapproj  Package.appxmanifest
Source/AlgorithmAnalysis/Libraries/AlgorithmAnalysis.Common/: AcolyteExtensions.cs  AlgorithmAnalysis.Common.csproj  AsyncLazy.cs  CastTo.cs  ComObjectHelper.cs  CommonConstants.cs  EnumExtensions.cs  Int32Extensions.cs  PredefinedPath.cs  TraceHelper.cs  Utils.cs
Source/AlgorithmAnalysis/Libraries/AlgorithmAnalysis.Configuration/: AlgorithmAnalysis.Configuration.csproj  AlgorithmOptions.cs  AnalysisOptions.cs  AppearanceOptions.cs  ConfigurationOptions.cs  ExcelOptions.cs  IOptions.cs  LoggerOptions.cs  ReportOptions.cs  config.json
Source/algorithms/: CMakeLists.txt  generators.hpp  main.cpp  tests_with_counter.hpp  tests_with_time.hpp  utils.cpp  utils.hpp
(+311 files in other folders)
